--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .marquee {
   width: var(--marquee-width);
   height: var(--marquee-height);
-  background-color: #111;
+  background-color: #00d5ff;
   color: #eee;
   overflow: hidden;
   position: relative;
@@ -42,11 +42,11 @@ body {
 }
 .marquee:before {
   left: 0;
-  background: linear-gradient(to right, #111 0%, transparent 100%);
+  background: linear-gradient(to right, #00d5ff 0%, transparent 100%);
 }
 .marquee:after {
   right: 0;
-  background: linear-gradient(to left, #111 0%, transparent 100%);
+  background: linear-gradient(to left, #00d5ff 0%, transparent 100%);
 }
 .marquee-content {
   list-style: none;
@@ -76,7 +76,7 @@ body {
 .marquee-content li img {
   width: 100%;
   /* height: 100%; */
-  border: 2px solid #eee;
+  border: 0px solid #eee;
 }
 
 @media (max-width: 600px) {
@@ -84,7 +84,8 @@ body {
   :root {
     --marquee-width: 100vw;
     --marquee-height: 16vh;
-    --marquee-elements-displayed: 3;
+    --marquee-elements-displayed: 2;
   }
   .marquee:before, .marquee:after { width: 5rem; }
 }
+        
